--- a/ts-parser/tsconfig.json
+++ b/ts-parser/tsconfig.json
@@ -5,8 +5,10 @@
         "strict": true,
         "esModuleInterop": true,
         "skipLibCheck": true,
-        "forceConsistentCasingInFileNames": true
+        "forceConsistentCasingInFileNames": true,
+        "experimentalDecorators": true
     },
     "include": ["**/*.ts"],
-    "exclude": ["node_modules"]
+    "exclude": ["node_modules"],
+    "strict": true
 }
