--- a/.gitignore
+++ b/.gitignore
@@ -207,7 +207,8 @@ cython_debug/
 marimo/_static/
 marimo/_lsp/
 __marimo__/
-output.drawio/.$output.drawio.dtmp
+
+# customize
+output.drawio/*
 doc/doc.txt
 cm.txt
-output.drawio/output.drawio
