--- a/package.json
+++ b/package.json
@@ -24,5 +24,8 @@
   "devDependencies": {
     "@types/node": "^24.0.13",
     "typescript": "^5.8.3"
+  },
+  "dependencies": {
+    "minimist": "^1.2.8"
   }
 }
